[package]
name = "csk"
version = "0.1.0"
authors = ["MJ <tywf91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = { git = "https://github.com/RustAudio/rodio" }
serialport = "3.3.0"
clap = "3.0.0-beta.1"